# deltabox

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.codex/skills/deltabox/: SKILL.md
crates/deltabox-cli/: Cargo.toml
crates/deltabox-cli/src/: main.rs
crates/deltabox-core/: Cargo.toml
crates/deltabox-core/src/: backends.rs  events.rs  extractors.rs  files.rs  index.rs  lib.rs  manifest.rs  schema.rs  search.rs  secrets.rs  storage_ops.rs  tags.rs  util.rs  vault.rs
crates/deltabox-core/src/storage/: local.rs  mod.rs  s3.rs
crates/deltabox-core/tests/: minio_integration.rs
scripts/: minio-integration-test.sh
