[workspace]
members = [
    "crates/deltabox-core",
    "crates/deltabox-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/deltabox"

[workspace.dependencies]
anyhow = "1.0"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
object_store = { version = "0.11", features = ["aws"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.42", features = ["rt-multi-thread"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
