[package]
name = "deltabox-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "deltabox"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
deltabox-core = { path = "../deltabox-core" }
serde.workspace = true
serde_json.workspace = true
