[package]
name = "deltabox-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
object_store.workspace = true
pdf-extract.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
walkdir.workspace = true
